--- a/style.css
+++ b/style.css
@@ -3,13 +3,28 @@ img {
   object-fit: cover;
 }
 
+video {
+  width: 90%;
+  height: auto;
+  display: block;
+}
+
+iframe {
+  width: 80%;
+  height: auto;
+  padding: 50px;
+  aspect-ratio: 16/9;
+}
+
 header nav ul {
   display: flex;
-  gap: 50px;
+  gap: 140px;
   list-style: none;
   margin: 5px;
   padding: 5px;
   padding-bottom: 0.4rem;
+  font-style: italic;
+  color: dodgerblue;
 }
 
 header {
@@ -47,7 +62,7 @@ body {
 
 #first_section .section_wrapper {
   display: grid;
-  grid-column: 1.5/6;
+  grid-column: 2/6;
   grid-row: 1/5;
   object-fit: cover;
   font-size: 7rem;
@@ -56,20 +71,87 @@ body {
 }
 
 #second_section {
+  margin-left: 10%;
+  margin-top: 10%;
+}
+
+#third_section .section_wrapper {
   font-size: 1.3rem;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 5%;
 }
 
-#third_section .section_wrapper {
+#fourth_section .section_wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 10px;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-top: 5%;
+}
+
+.image1 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  object-fit: cover;
+}
+
+.image2 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  object-fit: cover;
+}
+
+.image3 {
+  grid-column: 4/5;
+  grid-row: 1/2;
+  object-fit: cover;
+}
+
+.image4 {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  object-fit: cover;
+}
+.image5 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  object-fit: cover;
+}
+
+.image6 {
+  grid-column: 4/5;
+  grid-row: 2/3;
+  object-fit: cover;
+}
+
+.image7 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  object-fit: cover;
+}
+
+.image8 {
+  grid-column: 4/5;
+  grid-row: 3/4;
+  object-fit: cover;
+}
+
+#fourth_section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#fourth_section {
+  margin-left: 15%;
+}
+
+#fifth_section {
+  margin-left: 15%;
+}
+
+#sixth_section {
+  margin-left: 15%;
 }
 
 body {
